# aafwk_standard

./: OAT.xml  README.en.md  README.md  README_zh.md  aafwk.gni  bundle.json  feature.gni  hisysevent.yaml  ohos.build
ability_base/: BUILD.gn  ability_base.gni  bundle.json
ability_base/test/: BUILD.gn
common/task_dispatcher/: BUILD.gn
common/task_dispatcher/test/: BUILD.gn
form_runtime/: BUILD.gn  bundle.json  form_runtime.gni  hisysevent.yaml
form_runtime/sa_profile/: 403.xml  BUILD.gn
form_runtime/services/include/: form_ability_connection.h  form_acquire_connection.h  form_acquire_state_connection.h  form_ams_helper.h  form_batch_delete_connection.h  form_bms_helper.h  form_cache_mgr.h  form_cast_temp_connection.h  form_data_mgr.h  form_db_cache.h  form_delete_connection.h  form_dump_mgr.h  form_event_notify_connection.h  form_host_record.h  form_id_key.h  form_info_mgr.h  form_info_storage_mgr.h  form_item_info.h  form_mgr_adapter.h  form_mgr_service.h  form_msg_event_connection.h  form_provider_mgr.h  form_record.h  form_refresh_connection.h  form_refresh_limiter.h  form_storage_mgr.h  form_supply_callback.h  form_sys_event_receiver.h  form_task_mgr.h  form_timer_mgr.h  form_timer_option.h  form_util.h  kvstore_death_recipient_callback.h
form_runtime/services/src/: form_acquire_connection.cpp  form_acquire_state_connection.cpp  form_ams_helper.cpp  form_bms_helper.cpp  form_cache_mgr.cpp  form_cast_temp_connection.cpp  form_dump_mgr.cpp  form_host_callback.cpp  form_host_record.cpp  form_info_mgr.cpp  form_info_storage_mgr.cpp  form_item_info.cpp  form_mgr_adapter.cpp  form_mgr_service.cpp  form_msg_event_connection.cpp  form_provider_mgr.cpp  form_refresh_connection.cpp  form_refresh_limiter.cpp  form_supply_callback.cpp  form_sys_event_receiver.cpp  form_task_mgr.cpp  form_timer_mgr.cpp  kvstore_death_recipient_callback.cpp
form_runtime/test/: BUILD.gn
form_runtime/test/benchmarktest/: BUILD.gn
form_runtime/test/fuzztest/: BUILD.gn
form_runtime/test/systemtest/: BUILD.gn
frameworks/kits/appkit/: BUILD.gn
frameworks/kits/fmskit/: BUILD.gn
frameworks/kits/test/: BUILD.gn
frameworks/kits/wantagent/: BUILD.gn
idl/test/native/: BUILD.gn  IIdlTestService.idl
interfaces/innerkits/ability_manager/: BUILD.gn  ability_manager_headers.gni
interfaces/innerkits/app_manager/: BUILD.gn
interfaces/innerkits/base/: BUILD.gn
interfaces/innerkits/dataobs_manager/: BUILD.gn  dataobs_manager_headers.gni
services/: BUILD.gn
services/abilitymgr/: BUILD.gn  abilitymgr.gni
services/abilitymgr/include/: ability_config.h  ability_connect_manager.h  ability_event_handler.h  ability_manager_proxy.h  ability_manager_service.h  ability_manager_service_inner.h  ability_manager_stub.h  ability_parameter_container.h  ability_record.h  ability_running_record.h  ability_scheduler_proxy.h  ability_scheduler_stub.h  ability_stack_manager.h  ability_token_stub.h  ability_util.h  ams_configuration_parameter.h  app_scheduler.h  atomic_service_status_callback.h  call_container.h  call_record.h  configuration_distributor.h  configuration_holder.h  connection_record.h  data_ability_caller_recipient.h  data_ability_manager.h  data_ability_record.h  free_install_manager.h  inner_mission_info.h  kernal_ability_manager.h  kernal_system_app_manager.h  lifecycle_deal.h  lock_mission_container.h  lock_screen_event_subscriber.h  lock_screen_white_list.h  mission.h  mission_data_storage.h  mission_index_info.h  mission_info_mgr.h  mission_list.h  mission_list_manager.h  (+21 more)
services/abilitymgr/resource/: ams_service_config.json
services/abilitymgr/src/: aafwk_dummy_configuration.cpp  ability_connect_callback_stub.cpp  ability_connect_manager.cpp  ability_event_handler.cpp  ability_manager_client.cpp  ability_manager_proxy.cpp  ability_manager_service.cpp  ability_manager_service_inner.cpp  ability_manager_stub.cpp  ability_mission_info.cpp  ability_parameter_container.cpp  ability_record.cpp  ability_record_info.cpp  ability_running_info.cpp  ability_running_record.cpp  ability_scheduler_proxy.cpp  ability_scheduler_stub.cpp  ability_stack_manager.cpp  ability_start_setting.cpp  ams_configuration_parameter.cpp  app_scheduler.cpp  atomic_service_status_callback.cpp  atomic_service_status_callback_proxy.cpp  (+68 more)
services/appmgr/: BUILD.gn  lmks.cfg  lmks.rc
services/common/: BUILD.gn
services/dataobsmgr/: BUILD.gn  dataobsms.gni
services/formmgr/: BUILD.gn  bundle.json
services/test/: BUILD.gn
services/uripermmgr/: BUILD.gn  upms.cfg
tools/aa/: BUILD.gn
tools/fm/: BUILD.gn
tools/zip/: BUILD.gn
zidl/: BUILD.gn  bundle.json  main.cpp
zidl/ast/: ast_array_type.cpp  ast_array_type.h  ast_boolean_type.cpp  ast_boolean_type.h  ast_byte_type.cpp  ast_byte_type.h  ast_char_type.cpp  ast_char_type.h  ast_double_type.cpp  ast_double_type.h  ast_float_type.cpp  ast_float_type.h  ast_integer_type.cpp  ast_integer_type.h  ast_interface_type.cpp  ast_interface_type.h  ast_list_type.cpp  ast_list_type.h  ast_long_type.cpp  ast_long_type.h  ast_map_type.cpp  ast_map_type.h  ast_method.cpp  ast_method.h  ast_module.cpp  ast_module.h  ast_namespace.cpp  ast_namespace.h  ast_node.cpp  ast_node.h  ast_parameter.cpp  ast_parameter.h  ast_sequenceable_type.cpp  ast_sequenceable_type.h  ast_short_type.cpp  ast_short_type.h  ast_string_type.cpp  ast_string_type.h  ast_type.cpp  ast_type.h  (+2 more)
zidl/codegen/: code_emitter.cpp  code_emitter.h  code_generator.cpp  code_generator.h  cpp_code_emitter.cpp  cpp_code_emitter.h  java_code_emitter.cpp  java_code_emitter.h  js_code_emitter.cpp  js_code_emitter.h
zidl/metadata/: metadata.h  metadata_builder.cpp  metadata_builder.h  metadata_dumper.cpp  metadata_dumper.h  metadata_reader.cpp  metadata_reader.h  metadata_serializer.cpp  metadata_serializer.h
zidl/parser/: lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
zidl/util/: autoptr.h  file.cpp  file.h  light_refcount_base.cpp  light_refcount_base.h  logger.cpp  logger.h  options.cpp  options.h  string.cpp  string.h  string_builder.cpp  string_builder.h  string_pool.cpp  string_pool.h
(+2860 files in other folders)
