# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

aafwk_path = "//foundation/aafwk/standard"
appexecfwk_path = "//foundation/appexecfwk/standard"

services_path = "${aafwk_path}/services"

kits_path = "${aafwk_path}/frameworks/kits"

innerkits_path = "${aafwk_path}/interfaces/innerkits"

dispatcher_path = "${aafwk_path}/common/task_dispatcher"

system_test_app_path =
    "${aafwk_path}/test/resource/amssystemtestability/abilitySrc"

declare_args() {
  background_task_mgr_continuous_task_enable = true

  if (defined(global_parts_info) &&
    !defined(global_parts_info.resourceschedule_background_task_mgr)) {
    background_task_mgr_continuous_task_enable = false
  }
}
