# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/aafwk/standard/feature.gni")

aafwk_path = "//foundation/aafwk/standard"
appexecfwk_path = "//foundation/appexecfwk/standard"

services_path = "${aafwk_path}/services"

kits_path = "${aafwk_path}/frameworks/kits"

innerkits_path = "${aafwk_path}/interfaces/innerkits"

system_test_app_path =
    "${aafwk_path}/test/resource/amssystemtestability/abilitySrc"

declare_args() {
  background_task_mgr_continuous_task_enable = true
  distributed_data_object_enable = true

  if ((defined(global_parts_info) &&
       !defined(global_parts_info.resourceschedule_background_task_mgr)) ||
      !ability_runtime_graphics) {
    background_task_mgr_continuous_task_enable = false
  }

  if (defined(global_parts_info) &&
      !defined(global_parts_info.distributeddataobject)) {
    distributed_data_object_enable = false
  }
}
