# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

aafwk_path = "//foundation/aafwk/standard"
appexecfwk_path = "//foundation/appexecfwk/standard"
multimedia_path = "//foundation/multimedia/image_standard"
services_path = "//foundation/aafwk/standard/services"
multimodalinput_path = "//foundation/multimodalinput/input"
windowmanager_path = "//foundation/windowmanager"
graphic_path = "//foundation/graphic/graphic"
global_path = "//base/global"
distributedschedule_path = "//foundation/distributedschedule"
notification_path = "//base/notification"
distributeddatamgr_path = "//foundation/distributeddatamgr"
kits_path = "//foundation/aafwk/standard/frameworks/kits"
innerkits_path = "//foundation/aafwk/standard/interfaces/innerkits"
appexecfwk_innerkits_path = "${appexecfwk_path}/interfaces/innerkits"
appexecfwk_inner_api_path = "${appexecfwk_path}/interfaces/inner_api"
ans_core_path = "//base/notification/ans_standard/frameworks/ans/core"
system_test_app_path =
    "//foundation/aafwk/standard/test/resource/amssystemtestability/abilitySrc"

declare_args() {
  background_task_mgr_continuous_task_enable = true
  distributed_data_object_enable = true
  ability_runtime_graphics = true
  ability_runtime_power = true

  if (!defined(global_parts_info) ||
      defined(global_parts_info.account_os_account)) {
    os_account_part_enabled = true
  } else {
    os_account_part_enabled = false
  }
  if (defined(global_parts_info) &&
      !defined(global_parts_info.resourceschedule_background_task_mgr)) {
    background_task_mgr_continuous_task_enable = false
  }

  if (defined(global_parts_info) &&
      !defined(global_parts_info.distributeddatamgr_distributeddataobject)) {
    distributed_data_object_enable = false
  }
}
