# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/aafwk/standard/feature.gni")

group("ams_services_target") {
  deps = [
    "abilitymgr:abilityms_target",
    "appmgr:appms_target",
    "common:perm_verification",
    "dataobsmgr:dataobsms",
    "uripermmgr:libupms",
  ]
}

group("fms_services_target") {
  if (ability_runtime_graphics) {
    deps = [ "formmgr:fms_target" ]
  }
}
