# Copyright (c) Huawei Technologies Co., Ltd. 2019-2019. All rights reserved.

import("//build/ohos.gni")

config("zidl_config") {
  include_dirs = [
    "./",
    "//utils/native/base/include/",
  ]
}

common_sources = [
  "ast/ast_array_type.cpp",
  "ast/ast_boolean_type.cpp",
  "ast/ast_byte_type.cpp",
  "ast/ast_char_type.cpp",
  "ast/ast_double_type.cpp",
  "ast/ast_float_type.cpp",
  "ast/ast_integer_type.cpp",
  "ast/ast_interface_type.cpp",
  "ast/ast_list_type.cpp",
  "ast/ast_long_type.cpp",
  "ast/ast_map_type.cpp",
  "ast/ast_method.cpp",
  "ast/ast_module.cpp",
  "ast/ast_namespace.cpp",
  "ast/ast_node.cpp",
  "ast/ast_parameter.cpp",
  "ast/ast_sequenceable_type.cpp",
  "ast/ast_short_type.cpp",
  "ast/ast_string_type.cpp",
  "ast/ast_type.cpp",
  "ast/ast_void_type.cpp",
]

common_sources += [
  "codegen/code_emitter.cpp",
  "codegen/code_generator.cpp",
  "codegen/cpp_code_emitter.cpp",
  "codegen/java_code_emitter.cpp",
  "codegen/js_code_emitter.cpp",
]

common_sources += [
  "metadata/metadata_builder.cpp",
  "metadata/metadata_dumper.cpp",
  "metadata/metadata_reader.cpp",
  "metadata/metadata_serializer.cpp",
]

common_sources += [
  "parser/lexer.cpp",
  "parser/parser.cpp",
]

common_sources += [
  "util/file.cpp",
  "util/light_refcount_base.cpp",
  "util/logger.cpp",
  "util/options.cpp",
  "util/string.cpp",
  "util/string_builder.cpp",
  "util/string_pool.cpp",
]

ohos_executable("zidl") {
  sources = [ "main.cpp" ]
  sources += common_sources

  configs = [ ":zidl_config" ]

  deps = [ "//utils/native/base:utilsecurec" ]

  part_name = "zidl"
  subsystem_name = "aafwk"
}
